Camino only - Bug 370096: Fire onbeforeunload when closing windows/tabs. r=josh sr=pink.